--- a/BlackOutGobelins/Resources/assets/bot/third/1x/bot_third_pause.plist
+++ b/BlackOutGobelins/Resources/assets/bot/third/1x/bot_third_pause.plist
@@ -563,6 +563,19 @@
                 <key>sourceSize</key>
                 <string>{100,213}</string>
             </dict>
+            <key>bot_third_droite_18.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{947,272},{50,133}}</string>
+                <key>offset</key>
+                <string>{-3,10}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{22,30},{50,133}}</string>
+                <key>sourceSize</key>
+                <string>{100,213}</string>
+            </dict>
             <key>bot_third_droite_19.png</key>
             <dict>
                 <key>frame</key>
@@ -1188,6 +1201,19 @@
                 <string>{100,213}</string>
             </dict>
             <key>bot_third_gauche_17.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{812,553},{48,133}}</string>
+                <key>offset</key>
+                <string>{5,10}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{31,30},{48,133}}</string>
+                <key>sourceSize</key>
+                <string>{100,213}</string>
+            </dict>
+            <key>bot_third_gauche_18.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{812,553},{48,133}}</string>
