--- a/BlackOutGobelins/Resources/assets/bot/third/2x/bot_third_pause@2x.plist
+++ b/BlackOutGobelins/Resources/assets/bot/third/2x/bot_third_pause@2x.plist
@@ -563,6 +563,19 @@
                 <key>sourceSize</key>
                 <string>{200,426}</string>
             </dict>
+            <key>bot_third_droite_18.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{1336,860},{96,264}}</string>
+                <key>offset</key>
+                <string>{-5,19}</string>
+                <key>rotated</key>
+                <true/>
+                <key>sourceColorRect</key>
+                <string>{{47,62},{96,264}}</string>
+                <key>sourceSize</key>
+                <string>{200,426}</string>
+            </dict>
             <key>bot_third_droite_19.png</key>
             <dict>
                 <key>frame</key>
@@ -1188,6 +1201,19 @@
                 <string>{200,426}</string>
             </dict>
             <key>bot_third_gauche_17.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{1868,804},{96,264}}</string>
+                <key>offset</key>
+                <string>{9,19}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{61,62},{96,264}}</string>
+                <key>sourceSize</key>
+                <string>{200,426}</string>
+            </dict>
+            <key>bot_third_gauche_18.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{1868,804},{96,264}}</string>
